--- a/caddy/caddy.conf
+++ b/caddy/caddy.conf
@@ -3,7 +3,7 @@
   tls off
   log /caddy/caddy.log
   root /caddy/www/
-  proxy /port localhost:10000 {
+  proxy /ws localhost:10000 {
     websocket
     header_upstream -Origin
   }
