--- a/config.json
+++ b/config.json
@@ -49,39 +49,9 @@
 			}
 		},
 		{
-			"port": 10001,
-			"listen": "127.0.0.1",
-			"protocol": "dokodemo-door",
-			"tag": "wsdoko",
-			"settings": {
-				"address": "v1.mux.cool",
-				"followRedirect": false,
-				"network": "tcp"
-			},
-			"streamSettings": {
-				"network": "ws",
-				"wsSettings": {
-					"path": "/shadow"
-				}
-			}
-		},
-		{
-			"port": 9015,
-			"protocol": "shadowsocks",
-			"settings": {
-				"method": "chacha20-ietf-poly1305",
-				"ota": false,
-				"password": "sspass",
-				"network": "tcp,udp"
-			},
-			"streamSettings": {
-				"network": "domainsocket"
-			}
-		},
-		{
       "tag": "ws",
-			"port": 10000,
-			"listen": "127.0.0.1",
+			"port": 80,
+			"listen": "0.0.0.0",
 			"protocol": "vmess",
 			"settings": {
 				"clients": [{
@@ -122,26 +92,8 @@
 	},
 	"outbounds": [{
 		"protocol": "freedom",
-		"settings": {},
-		"tag": "direct"
-	},
-		{
-			"protocol": "blackhole",
-			"settings": {},
-			"tag": "blocked"
-		},
-		{
-			"protocol": "freedom",
-			"tag": "ssmux",
-			"streamSettings": {
-				"network": "domainsocket"
-			}
-		}],
-  "transport": {
-		"dsSettings": {
-			"path": "/v2ray/ss-loop.sock"
-		}
-	},
+		"settings": {}
+	}],
 	"routing": {
 		"rules": [{
 				"inboundTag": [
@@ -149,13 +101,6 @@
 				],
 				"outboundTag": "api",
 				"type": "field"
-			},
-			{
-				"type": "field",
-				"inboundTag": [
-					"wsdoko"
-				],
-				"outboundTag": "ssmux"
 			},
 			{
 				"type": "field",
