--- a/files/caddy.conf
+++ b/files/caddy.conf
@@ -1,8 +1,7 @@
 0.0.0.0:80
 {
   tls off
-  log /caddy/caddy.log
-  root /caddy/www/
+  root /etc/caddy/www/
   proxy /ws localhost:10000 {
     websocket
     header_upstream -Origin
