--- a/files/caddy.conf
+++ b/files/caddy.conf
@@ -1,7 +1,8 @@
 0.0.0.0:80
 {
   tls off
-  root /etc/caddy/www/
+  log /caddy/caddy.log
+  root /caddy/www/
   proxy /ws localhost:10000 {
     websocket
     header_upstream -Origin
